--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">mHydraBanking</string>
+    <string name="app_name">mBanking</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
